--- a/package.json
+++ b/package.json
@@ -1,91 +1,6 @@
 {
-  "name": "adapt_authoring",
-  "version": "0.10.4",
-  "license": "GPL-3.0",
-  "description": "A server-based user interface for authoring eLearning courses using the Adapt Framework.",
-  "keywords": [
-    "adapt",
-    "authoring"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/adaptlearning/adapt_authoring.git"
-  },
-  "main": "index",
-  "engines": {
-    "node": "12 || 14"
-  },
-  "scripts": {
-    "test": "grunt test",
-    "migrate": "migrate --config conf/migrate.json --template-file migrations/helpers/template.js"
-  },
-  "dependencies": {
-    "archiver": "^3.1.1",
-    "async": "^3.1.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.19.0",
-    "bower": "^1.8.8",
-    "bytes": "^3.1.0",
-    "chalk": "^2.4.2",
-    "compression": "^1.7.4",
-    "connect-mongodb-session": "^2.3.3",
-    "consolidate": "^0.15.1",
-    "cookie-parser": "^1.4.4",
-    "email-templates": "^6.0.2",
-    "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "ffmpeg-static": "^2.6.0",
-    "ffprobe": "^1.1.0",
-    "ffprobe-static": "^3.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "formidable": "^1.2.1",
-    "fs-extra": "^8.1.0",
-    "glob": "^7.1.4",
-    "grunt": "^1.0.4",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-handlebars": "^2.0.0",
-    "grunt-contrib-requirejs": "^1.0.0",
-    "grunt-mocha-test": "^0.13.3",
-    "handlebars": "^4.4.0",
-    "handlebars-form-helpers": "^0.1.4",
-    "hbs": "^4.0.5",
-    "inquirer": "^7.3.0",
-    "jshint-stylish": "^2.2.1",
-    "json-schema-mapper": "0.0.2",
-    "junk": "^3.1.0",
-    "less": "^3.10.3",
-    "log-update": "^3.3.0",
-    "matchdep": "^2.0.0",
-    "method-override": "^3.0.0",
-    "migrate-mongoose": "^4.0.0",
-    "mime": "^2.4.4",
-    "moment": "^2.24.0",
-    "mongodb-uri": "^0.9.7",
-    "mongoose": "^5.9.18",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
-    "needle": "^2.4.0",
-    "node-polyglot": "^2.4.0",
-    "nodemailer": "^6.3.0",
-    "optimist": "^0.6.1",
-    "passport": "^0.4.0",
-    "request": "^2.88.0",
-    "semver": "^6.3.0",
-    "serve-favicon": "^2.5.0",
-    "traverse": "^0.6.6",
-    "underscore": "^1.9.1",
-    "unzipper": "^0.10.5",
-    "validator": "^11.1.0",
-    "winston": "^3.2.1",
-    "yauzl": "^2.10.0"
-  },
-  "devDependencies": {
-    "mocha": "^6.2.1",
-    "mocha-multi": "^1.1.3",
-    "mocha-simple-html-reporter": "^1.1.0",
-    "mongodb": "^3.5.9",
-    "should": "^13.2.3",
-    "supertest": "^4.0.2"
-  }
+  "name": "adapt-authoring-ui",
+  "version": "0.0.1",
+  "description": "Front-end application for the Adapt authoring tool",
+  "main": "index.js"
 }
