--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "adapt-authoring-ui",
   "version": "0.0.1",
   "description": "Front-end application for the Adapt authoring tool",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "grunt": "^1.3.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-handlebars": "^2.0.0",
+    "grunt-contrib-requirejs": "^1.0.0",
+    "less": "^3.12.2",
+    "matchdep": "^2.0.0"
+  }
 }
