--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Front-end application for the Adapt authoring tool",
   "main": "index.js",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "grunt": "^1.3.0",
+    "grunt-babel": "^8.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-handlebars": "^2.0.0",
     "grunt-contrib-requirejs": "^1.0.0",
