--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "adapt-authoring-core": "adapt-security/adapt-authoring-core",
+    "fs-extra": "^10.0.0",
     "grunt": "^1.3.0",
     "grunt-babel": "^8.0.0",
     "grunt-contrib-copy": "^1.0.0",
