--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "@babel/preset-env": "^7.12.1",
     "adapt-authoring-core": "adapt-security/adapt-authoring-core",
     "fs-extra": "^10.0.0",
-    "grunt": "^1.3.0",
-    "grunt-babel": "^8.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-handlebars": "^2.0.0",
-    "grunt-contrib-requirejs": "^1.0.0",
-    "less": "^3.12.2"
+    "glob": "^7.2.0",
+    "handlebars": "^4.7.7",
+    "less": "^3.12.2",
+    "requirejs": "^2.3.6"
   }
 }
