--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "adapt-authoring-ui",
   "version": "0.0.1",
   "description": "Front-end application for the Adapt authoring tool",
+  "homepage": "https://github.com/adaptlearning/adapt-authoring-ui",
+  "license": "GPL-3.0",
+  "type": "module",
   "main": "index.js",
+  "repository": "adaptlearning/adapt-authoring-ui",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
