--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "license": "GPL-3.0",
   "type": "module",
   "main": "index.js",
-  "repository": "adaptlearning/adapt-authoring-ui",
+  "repository": "github:adapt-security/adapt-authoring-ui",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "adapt-authoring-core": "adapt-security/adapt-authoring-core",
+    "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "handlebars": "^4.7.7",
