--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "postinstall": "node ./npm_hooks/postinstall.js"
+    "postinstall": "node ./npm_hooks/postinstall.js",
+    "postupdate": "node ./npm_hooks/postinstall.js"
   },
   "repository": "github:adapt-security/adapt-authoring-ui",
   "dependencies": {
