--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "repository": "github:adapt-security/adapt-authoring-ui",
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
     "@babel/preset-env": "^7.16.0",
     "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
     "fs-extra": "^10.0.0",
