--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "handlebars": "^4.7.7",
     "less": "^3.12.2",
     "requirejs": "^2.3.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "standard": "^17.0.0"
   }
 }
