--- a/package.json
+++ b/package.json
@@ -11,14 +11,27 @@
   },
   "repository": "github:adapt-security/adapt-authoring-ui",
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/plugin-transform-react-jsx": "^7.20.13",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
+    "babel-plugin-transform-amd-to-es6": "^0.6.1",
+    "cpy": "^9.0.1",
     "fs-extra": "^10.0.0",
+    "gaze": "^1.1.3",
+    "globby": "^13.1.3",
     "glob": "^7.2.0",
     "handlebars": "^4.7.7",
     "less": "^3.12.2",
-    "requirejs": "^2.3.6"
+    "magic-string": "^0.30.0",
+    "requirejs": "^2.3.6",
+    "rollup": "^2.79.1",
+    "upath": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
