--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-react-jsx": "^7.20.13",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@emotion/styled": "*",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -31,6 +32,7 @@
     "handlebars": "^4.7.7",
     "less": "^3.12.2",
     "magic-string": "^0.30.0",
+    "react-organizational-chart": "*",
     "requirejs": "^2.3.6",
     "resolve": "^1.22.2",
     "rollup": "^2.79.1",
