--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "handlebars": "^4.7.7",
@@ -23,5 +22,10 @@
   "devDependencies": {
     "eslint": "^8.36.0",
     "standard": "^17.0.0"
+  },
+  "peerDependencies": {
+    "adapt-authoring-adaptframework": "github:adapt-security/adapt-authoring-adaptframework",
+    "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
+    "adapt-authoring-server": "github:adapt-security/adapt-authoring-server"
   }
 }
