--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "repository": "github:adapt-security/adapt-authoring-ui",
   "dependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-env": "^7.23.9",
     "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
-    "fs-extra": "^10.0.0",
-    "glob": "^7.2.0",
-    "handlebars": "^4.7.7",
-    "less": "^3.12.2",
+    "fs-extra": "^11.2.0",
+    "glob": "^10.3.10",
+    "handlebars": "^4.7.8",
+    "less": "^4.2.0",
     "requirejs": "^2.3.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "standard": "^17.1.0"
   }
 }
