--- a/package.json
+++ b/package.json
@@ -12,13 +12,29 @@
   "repository": "github:adapt-security/adapt-authoring-ui",
   "dependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/plugin-transform-react-jsx": "^7.20.13",
     "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
+    "babel-plugin-transform-amd-to-es6": "^0.6.1",
+    "cpy": "^9.0.1",
     "fs-extra": "^11.2.0",
+    "gaze": "^1.1.3",
+    "globby": "^13.1.3",
     "glob": "^11.0.0",
     "handlebars": "^4.7.8",
     "less": "^4.2.0",
-    "requirejs": "^2.3.6"
+    "magic-string": "^0.30.0",
+    "requirejs": "^2.3.6",
+    "resolve": "^1.22.2",
+    "rollup": "^2.79.1",
+    "upath": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^9.11.0",
