--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "conventional-changelog-eslint": "^3.0.9",
-    "semantic-release": "^21.0.1",
-    "semantic-release-replace-plugin": "^1.2.7"
+    "semantic-release-replace-plugin": "^1.2.7",
+    "semantic-release": "^21.0.1"
   },
   "release": {
     "plugins": [
