--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -6,5 +6,5 @@ on:
       
 jobs:
   release:
-    uses: adapt-security/.github/workflows/releases.yml@master
+    uses: adapt-security/.github/.github/workflows/releases.yml@master
     secrets: inherit
