--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "upath": "^2.0.1"
   },
   "devDependencies": {
-    "standard": "^17.1.0",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.5",
-    "@semantic-release/npm": "^9.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "conventional-changelog-eslint": "^3.0.9",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/npm": "^13.1.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
+    "conventional-changelog-eslint": "^6.0.0",
+    "semantic-release": "^25.0.2",
     "semantic-release-replace-plugin": "^1.2.7",
-    "semantic-release": "^21.0.1"
+    "standard": "^17.1.0",
   },
   "release": {
     "plugins": [
