--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "conventional-changelog-eslint": "^6.0.0",
     "semantic-release": "^25.0.2",
     "semantic-release-replace-plugin": "^1.2.7",
-    "standard": "^17.1.0",
+    "standard": "^17.1.0"
   },
   "release": {
     "plugins": [
