--- a/package.json
+++ b/package.json
@@ -36,14 +36,9 @@
     "upath": "^2.0.1"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^12.0.2",
-    "@semantic-release/npm": "^13.1.2",
-    "@semantic-release/release-notes-generator": "^14.1.0",
     "conventional-changelog-eslint": "^6.0.0",
     "semantic-release": "^25.0.2",
-    "semantic-release-replace-plugin": "^1.2.7",
     "standard": "^17.1.0"
   },
   "release": {
@@ -62,15 +57,7 @@
       ],
       "@semantic-release/npm",
       "@semantic-release/github",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "package.json"
-          ],
-          "message": "Chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-        }
-      ]
+      "@semantic-release/git"
     ]
   },
   "standard": {
